--- a/index.html
+++ b/index.html
@@ -53,8 +53,31 @@
 
             </section>
             
+<!--Footer-->
+
             <footer>
-            
+                    <nav id="footernav1">
+                        <ul>
+                            <li class="footertitle"><a href="#">A propos</a></li>
+                            <li><a href="#">Fonctionnement du site</a></li>
+                            <li><a href="#">Conditions Générales de vente</a></li>
+                            <li><a href="#">Données et confidentialité</a></li>
+                        </ul>
+                    </nav>
+                    <nav id="footernav2">
+                        <ul>
+                            <li class="footertitle"><a href="#">Nos hébergements</a></li>
+                            <li><a href="#">Charte qualité</a></li>
+                            <li><a href="#">Soumettre votre hôtel</a></li>
+                        </ul>
+                    </nav>
+                    <nav id="footernav3">
+                        <ul>
+                            <li class="footertitle"><a href="#">Assistance</a></li>
+                            <li><a href="#">Centre d'aide</a></li>
+                            <li><a href="#">Nous contacter</a></li>
+                        </ul>
+                    </nav>
             </footer>
         </div>
     </body>
