Ajout hebergements ville

--- a/index.html
+++ b/index.html
@@ -50,7 +50,101 @@
 
                 <div id="info"><i class="fas fa-info"></i><span>Plus de 500 logements sont disponibles dans cette
                 ville</span></div>
+            </section>
 
+<!--Hébergements Ville--> 
+
+            <section id="conthebergville">
+                <h2 id="hebergville">Herbergements à Marseille</h2>
+                <div class="hebergements">
+                    <a href="#" class="lienheberg">
+                        <figure class="hebergfig">
+                            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre avec lits superposés">
+                            <figcaption class="figcaptionhebergement"> 
+                                <h3 class="titrephoto">Auberge la Cannebière</h3>
+                                <p class="couthebergement">Nuit à partir de <span class="hebergprix">25€</span></p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <a href="#" class="lienheberg">
+                        <figure class="hebergfig">
+                            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre d'hôtel avec deux lits individuels">
+                            <figcaption class="figcaptionhebergement"> 
+                                <h3 class="titrephoto">Hôtel du port</h3>
+                                <p class="couthebergement">Nuit à partir de <span class="hebergprix">52€</span></p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <a href="#" class="lienheberg">
+                        <figure class="hebergfig">
+                            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre d'hôtel avec un grand placard">
+                            <figcaption class="figcaptionhebergement"> 
+                                <h3 class="titrephoto">Hôtel Les mouettes</h3>
+                                <p class="couthebergement">Nuit à partir de <span class="hebergprix">76€</span></p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <a href="#" class="lienheberg">
+                        <figure class="hebergfig">
+                            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre d'hôtel thème marin">
+                            <figcaption class="figcaptionhebergement"> 
+                                <h3 class="titrephoto">Hôtel de la mer</h3>
+                                <p class="couthebergement">Nuit à partir de <span class="hebergprix">46€</span></p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <a href="#" class="lienheberg">
+                        <figure class="hebergfig">
+                            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge avec lits superposés">
+                            <figcaption class="figcaptionhebergement"> 
+                                <h3 class="titrephoto">Auberge Le Panier</h3>
+                                <p class="couthebergement">Nuit à partir de <span class="hebergprix">23€</span></p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="far fa-star"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                    <a href="#" class="lienheberg">
+                        <figure class="hebergfig">
+                            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre d'hôtel">
+                            <figcaption class="figcaptionhebergement"> 
+                                <h3 class="titrephoto">Hôtel chez Amina</h3>
+                                <p class="couthebergement">Nuit à partir de <span class="hebergprix">96€</span></p>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </figcaption>
+                        </figure>
+                    </a>
+                </div>
+                <div class="affplus">
+                    <a href="#" class="hebergafficherplus">Afficher plus</a>
+                </div>
             </section>
             
 <!--Footer-->
