--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <section id="conthebergville">
                 <h2 id="hebergville">Herbergements à Marseille</h2>
                 <div class="hebergements">
-                    <a href="#" class="lienheberg">
+                    <a href="construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre avec lits superposés">
                             <figcaption class="figcaptionhebergement"> 
@@ -71,7 +71,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="#" class="lienheberg">
+                    <a href="construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre d'hôtel avec deux lits individuels">
                             <figcaption class="figcaptionhebergement"> 
@@ -85,7 +85,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="#" class="lienheberg">
+                    <a href="construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre d'hôtel avec un grand placard">
                             <figcaption class="figcaptionhebergement"> 
@@ -99,7 +99,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="#" class="lienheberg">
+                    <a href="construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre d'hôtel thème marin">
                             <figcaption class="figcaptionhebergement"> 
@@ -113,7 +113,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="#" class="lienheberg">
+                    <a href="construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge avec lits superposés">
                             <figcaption class="figcaptionhebergement"> 
@@ -127,7 +127,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="#" class="lienheberg">
+                    <a href="construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre d'hôtel">
                             <figcaption class="figcaptionhebergement"> 
@@ -143,7 +143,7 @@
                     </a>
                 </div>
                 <div class="affplus">
-                    <a href="#" class="hebergafficherplus">Afficher plus</a>
+                    <a href="construction.html" class="hebergafficherplus">Afficher plus</a>
                 </div>
             </section>
             
@@ -152,24 +152,24 @@
             <footer>
                     <nav id="footernav1">
                         <ul>
-                            <li class="footertitle"><a href="#">A propos</a></li>
-                            <li><a href="#">Fonctionnement du site</a></li>
-                            <li><a href="#">Conditions Générales de vente</a></li>
-                            <li><a href="#">Données et confidentialité</a></li>
+                            <li class="footertitle"><a href="construction.html">A propos</a></li>
+                            <li><a href="construction.html">Fonctionnement du site</a></li>
+                            <li><a href="construction.html">Conditions Générales de vente</a></li>
+                            <li><a href="construction.html">Données et confidentialité</a></li>
                         </ul>
                     </nav>
                     <nav id="footernav2">
                         <ul>
-                            <li class="footertitle"><a href="#">Nos hébergements</a></li>
-                            <li><a href="#">Charte qualité</a></li>
-                            <li><a href="#">Soumettre votre hôtel</a></li>
+                            <li class="footertitle"><a href="construction.html">Nos hébergements</a></li>
+                            <li><a href="construction.html">Charte qualité</a></li>
+                            <li><a href="construction.html">Soumettre votre hôtel</a></li>
                         </ul>
                     </nav>
                     <nav id="footernav3">
                         <ul>
-                            <li class="footertitle"><a href="#">Assistance</a></li>
-                            <li><a href="#">Centre d'aide</a></li>
-                            <li><a href="#">Nous contacter</a></li>
+                            <li class="footertitle"><a href="construction.html">Assistance</a></li>
+                            <li><a href="construction.html">Centre d'aide</a></li>
+                            <li><a href="construction.html">Nous contacter</a></li>
                         </ul>
                     </nav>
             </footer>
