Ajout de la rubrique activités

--- a/construction.html
+++ b/construction.html
@@ -13,7 +13,7 @@
 <!--Logo + navigation-->
 
             <header>
-                <img src="images/logo/Reservia.svg" alt="Réservia" class="logo" /></a>
+                <img src="images/logo/Reservia.svg" alt="Réservia" class="logo" />
             
                 <nav class="headernav">
                     <ul>
@@ -27,7 +27,8 @@
 <!--Site en construction-->
 
 <section id="conthebergville">
-    <h2 id="hebergville"><i class="fas fa-cogs"></i></br></br>Site en construction</h2>
+    <i class="fas fa-cogs"></i>
+    <h2 id="hebergville">Site en construction</h2>
     <div class="hebergements">
         <a href="index.html" class="lienheberg">
             <figure class="hebergfig">
@@ -44,6 +45,7 @@
 <!--Footer-->
 
             <footer>
+                <div class="contfooter">
                     <nav id="footernav1">
                         <ul>
                             <li class="footertitle"><a href="#">A propos</a></li>
@@ -66,6 +68,7 @@
                             <li><a href="#">Nous contacter</a></li>
                         </ul>
                     </nav>
+                </div>    
             </footer>
         </div>
     </body>
