--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <!--Logo + navigation-->
 
             <header>
-                <img src="images/logo/Reservia.svg" alt="Réservia" class="logo" /></a>
+                <img src="images/logo/Reservia.svg" alt="Réservia" class="logo"/>
             
                 <nav class="headernav">
                     <ul>
                         <li><a id="hébergements" href="#conthebergville">Hébergements</a></li>
-                        <li><a id="activités" href="#">Activités</a></li>
+                        <li><a id="activités" href="#contactivités">Activités</a></li>
                         <li><a id="inscrire" href="construction.html">S'inscrire</a></li>
                     </ul>
                 </nav>
@@ -197,10 +197,79 @@
     </div>
 </section>
 </div>
+
+<!--Activités ville-->
+
+<section id="contactivités">
+    <h2 id="titreactivités">Activités à Marseille</h2>
+    <div class="contimgact">
+    <div class="activitésfig1">
+        <a href="construction.html" class="lienactivités">
+            <figure class="figactivités">
+                <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port de Marseille">
+                <figcaption class="figcaptionactivités"> 
+                    <h3 class="titrephotoactivités">Vieux port</h3>
+                </figcaption>
+            </figure>
+        </a>
+    </div>
+
+    <div class="activitésfig2_3">
+        <a href="construction.html" class="lienactivités">
+            <figure class="figactivités2_3">
+                <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de pomègues">
+                <figcaption class="figcaptionactivités"> 
+                    <h3 class="titrephotoactivités">Fort de Pomègues</h3>
+                </figcaption>
+            </figure>
+        </a>
+        <a href="construction.html" class="lienactivités">
+            <figure class="figactivités1_3">
+                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles de Frioul">
+                <figcaption class="figcaptionactivités"> 
+                    <h3 class="titrephotoactivités">Îles de Frioul</h3>
+                </figcaption>
+            </figure>
+        </a>
+    </div>
+
+    <div class="activitésfig1">
+        <a href="construction.html" class="lienactivités">
+            <figure class="figactivités">
+                <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National Des Calanques">
+                <figcaption class="figcaptionactivités"> 
+                    <h3 class="titrephotoactivités">Parc National Des Calanques</h3>
+                </figcaption>
+            </figure>
+        </a>
+    </div>
+
+    <div class="activitésfig1_2">
+        <a href="construction.html" class="lienactivités">
+            <figure class="figactivités1_2">
+                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                <figcaption class="figcaptionactivités"> 
+                    <h3 class="titrephotoactivités">Notre-Dame-de-la-Garde</h3>
+                </figcaption>
+            </figure>
+        </a>
+        <a href="construction.html" class="lienactivités">
+            <figure class="figactivités1_2">
+                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                <figcaption class="figcaptionactivités"> 
+                    <h3 class="titrephotoactivités1_2">Parc Longchamp</h3>
+                </figcaption>
+            </figure>
+        </a>
+    </div>
+</div>
+
+</section>
+
 <!--Footer-->
 
             <footer>
-                <div id="contfooter">
+                <div class="contfooter">
                     <nav id="footernav1">
                         <ul>
                             <li class="footertitle"><a href="construction.html">A propos</a></li>
