--- a/construction.html
+++ b/construction.html
@@ -17,8 +17,8 @@
             
                 <nav class="headernav">
                     <ul>
-                        <li><a id="hébergements" href="#">Hébergements</a></li>
-                        <li><a id="activités" href="#">Activités</a></li>
+                        <li><a id="hébergements" href="index.html#conthebergville">Hébergements</a></li>
+                        <li><a id="activités" href="index.html#contactivités">Activités</a></li>
                         <li><a id="inscrire" href="#">S'inscrire</a></li>
                     </ul>
                 </nav>
