Réorganisation du dépôt local et cré fich css mob

--- a/pageconstruction/construction.html
+++ b/pageconstruction/construction.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
         <script src="https://kit.fontawesome.com/3858f0544e.js" crossorigin="anonymous"></script>
 	    <title>Reservia</title>
     </head>
@@ -13,12 +13,12 @@
 <!--Logo + navigation-->
 
             <header>
-                <img src="images/logo/Reservia.svg" alt="Réservia" class="logo" />
+                <img src="../images/logo/Reservia.svg" alt="Réservia" class="logo" />
             
                 <nav class="headernav">
                     <ul>
-                        <li><a id="hébergements" href="index.html#conthebergville">Hébergements</a></li>
-                        <li><a id="activités" href="index.html#contactivités">Activités</a></li>
+                        <li><a id="hébergements" href="../index.html#conthebergville">Hébergements</a></li>
+                        <li><a id="activités" href="../index.html#contactivités">Activités</a></li>
                         <li><a id="inscrire" href="#">S'inscrire</a></li>
                     </ul>
                 </nav>
@@ -30,9 +30,9 @@
     <i class="fas fa-cogs"></i>
     <h2 id="hebergville">Site en construction</h2>
     <div class="hebergements">
-        <a href="index.html" class="lienheberg">
+        <a href="../index.html" class="lienheberg">
             <figure class="hebergfig">
-                <img src="images/logo/Reservia.svg" alt="Logo Reservia">
+                <img src="../images/logo/Reservia.svg" alt="Logo Reservia">
                 <figcaption class="figcaptionhebergement"> 
                     <h3 class="titrephoto">Retourner à l'accueil</h3>
                     <p class="couthebergement">Cliquez ici</p>
