--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="https://kit.fontawesome.com/3858f0544e.js" crossorigin="anonymous"></script>
 	    <title>Reservia</title>
     </head>
@@ -19,7 +19,7 @@
                     <ul>
                         <li><a id="hébergements" href="#conthebergville">Hébergements</a></li>
                         <li><a id="activités" href="#contactivités">Activités</a></li>
-                        <li><a id="inscrire" href="construction.html">S'inscrire</a></li>
+                        <li><a id="inscrire" href="pageconstruction/construction.html">S'inscrire</a></li>
                     </ul>
                 </nav>
             </header>
@@ -57,7 +57,7 @@
             <section id="conthebergville">
                 <h2 id="hebergville">Herbergements à Marseille</h2>
                 <div class="hebergements">
-                    <a href="construction.html" class="lienheberg">
+                    <a href="pageconstruction/construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre avec lits superposés">
                             <figcaption class="figcaptionhebergement"> 
@@ -71,7 +71,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="construction.html" class="lienheberg">
+                    <a href="pageconstruction/construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre d'hôtel avec deux lits individuels">
                             <figcaption class="figcaptionhebergement"> 
@@ -85,7 +85,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="construction.html" class="lienheberg">
+                    <a href="pageconstruction/construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre d'hôtel avec un grand placard">
                             <figcaption class="figcaptionhebergement"> 
@@ -99,7 +99,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="construction.html" class="lienheberg">
+                    <a href="pageconstruction/construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre d'hôtel thème marin">
                             <figcaption class="figcaptionhebergement"> 
@@ -113,7 +113,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="construction.html" class="lienheberg">
+                    <a href="pageconstruction/construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge avec lits superposés">
                             <figcaption class="figcaptionhebergement"> 
@@ -127,7 +127,7 @@
                             </figcaption>
                         </figure>
                     </a>
-                    <a href="construction.html" class="lienheberg">
+                    <a href="pageconstruction/construction.html" class="lienheberg">
                         <figure class="hebergfig">
                             <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre d'hôtel">
                             <figcaption class="figcaptionhebergement"> 
@@ -143,7 +143,7 @@
                     </a>
                 </div>
                 <div class="affplus">
-                    <a href="construction.html" class="hebergafficherplus">Afficher plus</a>
+                    <a href="pageconstruction/construction.html" class="hebergafficherplus">Afficher plus</a>
                 </div>
             </section>
 
@@ -152,7 +152,7 @@
 <section id="conthebergpop">
     <h2 id="hebergpop">Les plus populaires<i class="fas fa-chart-line"></i></h2>
     <div class="hebergementspop">
-        <a href="construction.html" class="lienhebergpop">
+        <a href="pageconstruction/construction.html" class="lienhebergpop">
             <figure class="popfig">
                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre d'hôtel verte">
                 <figcaption class="figcaptionhebergementpop"> 
@@ -166,7 +166,7 @@
                 </figcaption>
             </figure>
         </a>
-        <a href="construction.html" class="lienhebergpop">
+        <a href="pageconstruction/construction.html" class="lienhebergpop">
             <figure class="popfig">
                 <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes moderne">
                 <figcaption class="figcaptionhebergementpop"> 
@@ -180,7 +180,7 @@
                 </figcaption>
             </figure>
         </a>
-        <a href="construction.html" class="lienhebergpop">
+        <a href="pageconstruction/construction.html" class="lienhebergpop">
             <figure class="popfig">
                 <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre d'hôtel">
                 <figcaption class="figcaptionhebergementpop"> 
@@ -204,7 +204,7 @@
     <h2 id="titreactivités">Activités à Marseille</h2>
     <div class="contimgact">
     <div class="activitésfig1">
-        <a href="construction.html" class="lienactivités">
+        <a href="pageconstruction/construction.html" class="lienactivités">
             <figure class="figactivités">
                 <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port de Marseille">
                 <figcaption class="figcaptionactivités"> 
@@ -215,7 +215,7 @@
     </div>
 
     <div class="activitésfig2_3">
-        <a href="construction.html" class="lienactivités">
+        <a href="pageconstruction/construction.html" class="lienactivités">
             <figure class="figactivités2_3">
                 <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de pomègues">
                 <figcaption class="figcaptionactivités"> 
@@ -223,7 +223,7 @@
                 </figcaption>
             </figure>
         </a>
-        <a href="construction.html" class="lienactivités">
+        <a href="pageconstruction/construction.html" class="lienactivités">
             <figure class="figactivités1_3">
                 <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles de Frioul">
                 <figcaption class="figcaptionactivités"> 
@@ -234,7 +234,7 @@
     </div>
 
     <div class="activitésfig1">
-        <a href="construction.html" class="lienactivités">
+        <a href="pageconstruction/construction.html" class="lienactivités">
             <figure class="figactivités">
                 <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National Des Calanques">
                 <figcaption class="figcaptionactivités"> 
@@ -245,7 +245,7 @@
     </div>
 
     <div class="activitésfig1_2">
-        <a href="construction.html" class="lienactivités">
+        <a href="pageconstruction/construction.html" class="lienactivités">
             <figure class="figactivités1_2">
                 <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                 <figcaption class="figcaptionactivités"> 
@@ -253,7 +253,7 @@
                 </figcaption>
             </figure>
         </a>
-        <a href="construction.html" class="lienactivités">
+        <a href="pageconstruction/construction.html" class="lienactivités">
             <figure class="figactivités1_2">
                 <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
                 <figcaption class="figcaptionactivités"> 
@@ -272,24 +272,24 @@
                 <div class="contfooter">
                     <nav id="footernav1">
                         <ul>
-                            <li class="footertitle"><a href="construction.html">A propos</a></li>
-                            <li><a href="construction.html">Fonctionnement du site</a></li>
-                            <li><a href="construction.html">Conditions Générales de vente</a></li>
-                            <li><a href="construction.html">Données et confidentialité</a></li>
+                            <li class="footertitle"><a href="pageconstruction/construction.html">A propos</a></li>
+                            <li><a href="pageconstruction/construction.html">Fonctionnement du site</a></li>
+                            <li><a href="pageconstruction/construction.html">Conditions Générales de vente</a></li>
+                            <li><a href="pageconstruction/construction.html">Données et confidentialité</a></li>
                         </ul>
                     </nav>
                     <nav id="footernav2">
                         <ul>
-                            <li class="footertitle"><a href="construction.html">Nos hébergements</a></li>
-                            <li><a href="construction.html">Charte qualité</a></li>
-                            <li><a href="construction.html">Soumettre votre hôtel</a></li>
+                            <li class="footertitle"><a href="pageconstruction/construction.html">Nos hébergements</a></li>
+                            <li><a href="pageconstruction/construction.html">Charte qualité</a></li>
+                            <li><a href="pageconstruction/construction.html">Soumettre votre hôtel</a></li>
                         </ul>
                     </nav>
                     <nav id="footernav3">
                         <ul>
-                            <li class="footertitle"><a href="construction.html">Assistance</a></li>
-                            <li><a href="construction.html">Centre d'aide</a></li>
-                            <li><a href="construction.html">Nous contacter</a></li>
+                            <li class="footertitle"><a href="pageconstruction/construction.html">Assistance</a></li>
+                            <li><a href="pageconstruction/construction.html">Centre d'aide</a></li>
+                            <li><a href="pageconstruction/construction.html">Nous contacter</a></li>
                         </ul>
                     </nav>
                 </div>
