Titres + barre de recherche + filtres css mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <section>
                 <div id="recherche">
-                    <h1 id="titre">Trouver votre hébergement de rêve</h1>
+                    <h1 id="titre">Trouvez votre hébergement pour des vacances de rêve</h1>
                     <h2 id="sous_titre">En plein centre ville ou en pleine nature</h2>
                     
                     <form id="search" method="post" action="traitement.php">
@@ -44,7 +44,7 @@
 
                 <div id="conteneurfiltre">
                     <form id="barrefiltre" method="post" action="traitement.php">
-                        <span id="titrefiltre" >Filtres</span>
+                        <span id="titrefiltre" >Filtres</span><br class="retour_mobile">
                         <span class="filtreeco filtre"><i class="fas fa-money-bill-wave"></i>Économique</span>
                         <span class="filtre"><i class="fas fa-child"></i>Familial</span>
                         <span class="filtre"><i class="fas fa-heart"></i>Romantique</span>
@@ -52,7 +52,7 @@
                     </form>    
                 </div>
 
-                <div id="info"><i class="fas fa-info"></i><span>Plus de 500 logements sont disponibles dans cette
+                <div id="info"><i title="Réservez vite" class="fas fa-info"></i><span>Plus de 500 logements sont disponibles dans cette
                 ville</span></div>
             </section>
 
@@ -269,7 +269,7 @@
 </div>
 
 </section>
-
+</div>
 <!--Footer-->
 
             <footer>
@@ -298,6 +298,6 @@
                     </nav>
                 </div>
             </footer>
-        </div>
+        
     </body>
 </html>
