Finalisation css mobile

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <form id="search" method="post" action="traitement.php">
                             <span id="cadrelocalisation"><i class="fas fa-map-marker-alt"></i></span>
                             <input type="search" name="recherche" id="textederecherche" placeholder="Marseille, France">
-                            <span id="submitrecherche">Rechercher</span>
+                            <div class="boutonrecherche"><span id="submitrecherche">Rechercher</span><i class="fas fa-search"></i></div>
                     </form>
                 </div>
 
@@ -160,13 +160,13 @@
             <figure class="popfig">
                 <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre d'hôtel verte">
                 <figcaption class="figcaptionhebergementpop"> 
-                    <h3 class="titrephotopop">Hôtel Le soleil du matin</h3>
-                    <p class="couthebergementpop">Nuit à partir de <span class="hebergprix">128€</span></p>
+                    <div><h3 class="titrephotopop">Hôtel Le soleil du matin</h3>
+                    <p class="couthebergementpop">Nuit à partir de <span class="hebergprix">128€</span></p></div>
+                    <div class="etoilespop"><i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
+                    <i class="fas fa-star"></i></div>
                 </figcaption>
             </figure>
         </a>
@@ -174,13 +174,13 @@
             <figure class="popfig">
                 <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambre d'hôtes moderne">
                 <figcaption class="figcaptionhebergementpop"> 
-                    <h3 class="titrephotopop">Au coeur de l'eau Chambres d'hôtes</h3>
-                    <p class="couthebergementpop">Nuit à partir de <span class="hebergprix">71€</span></p>
+                    <div><h3 class="titrephotopop">Au coeur de l'eau Chambres d'hôtes</h3>
+                    <p class="couthebergementpop">Nuit à partir de <span class="hebergprix">71€</span></p></div>
+                    <div class="etoilespop"><i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i></div>
                 </figcaption>
             </figure>
         </a>
@@ -188,13 +188,13 @@
             <figure class="popfig">
                 <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre d'hôtel">
                 <figcaption class="figcaptionhebergementpop"> 
-                    <h3 class="titrephotopop">Hôtel Tout bleu et Blanc</h3>
-                    <p class="couthebergementpop">Nuit à partir de <span class="hebergprix">68€</span></p>
+                    <div><h3 class="titrephotopop">Hôtel Tout bleu et Blanc</h3>
+                    <p class="couthebergementpop">Nuit à partir de <span class="hebergprix">68€</span></p></div>
+                    <div class="etoilespop"><i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
+                    <i class="far fa-star"></i></div>
                 </figcaption>
             </figure>
         </a>
@@ -209,7 +209,7 @@
     <div class="contimgact">
     <div class="activitésfig1">
         <a href="pageconstruction/construction.html" class="lienactivités">
-            <figure class="figactivités">
+            <figure class="figactivités figmobile">
                 <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port de Marseille">
                 <figcaption class="figcaptionactivités"> 
                     <h3 class="titrephotoactivités">Vieux port</h3>
@@ -220,7 +220,7 @@
 
     <div class="activitésfig2_3">
         <a href="pageconstruction/construction.html" class="lienactivités">
-            <figure class="figactivités2_3">
+            <figure class="figactivités2_3 figmobile">
                 <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de pomègues">
                 <figcaption class="figcaptionactivités"> 
                     <h3 class="titrephotoactivités">Fort de Pomègues</h3>
@@ -228,7 +228,7 @@
             </figure>
         </a>
         <a href="pageconstruction/construction.html" class="lienactivités">
-            <figure class="figactivités1_3">
+            <figure class="figactivités1_3 figmobile">
                 <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles de Frioul">
                 <figcaption class="figcaptionactivités"> 
                     <h3 class="titrephotoactivités">Îles de Frioul</h3>
@@ -239,7 +239,7 @@
 
     <div class="activitésfig1">
         <a href="pageconstruction/construction.html" class="lienactivités">
-            <figure class="figactivités">
+            <figure class="figactivités figmobile">
                 <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National Des Calanques">
                 <figcaption class="figcaptionactivités"> 
                     <h3 class="titrephotoactivités">Parc National Des Calanques</h3>
@@ -250,7 +250,7 @@
 
     <div class="activitésfig1_2">
         <a href="pageconstruction/construction.html" class="lienactivités">
-            <figure class="figactivités1_2">
+            <figure class="figactivités1_2 figmobile">
                 <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                 <figcaption class="figcaptionactivités"> 
                     <h3 class="titrephotoactivités">Notre-Dame-de-la-Garde</h3>
@@ -258,7 +258,7 @@
             </figure>
         </a>
         <a href="pageconstruction/construction.html" class="lienactivités">
-            <figure class="figactivités1_2">
+            <figure class="figactivités1_2 figmobile">
                 <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
                 <figcaption class="figcaptionactivités"> 
                     <h3 class="titrephotoactivités1_2">Parc Longchamp</h3>
