--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" media="all and (min-width: 941px) and (max-width: 1415px)" href="css/grandetablette.css" />
+        <link rel="stylesheet" media="all and (min-width: 481px) and (max-width: 940px)" href="css/tablette.css" />
         <link rel="stylesheet" media="all and (max-width: 480px)" href="css/mobile.css" />
         <script src="https://kit.fontawesome.com/3858f0544e.js" crossorigin="anonymous"></script>
 	    <title>Reservia</title>
